--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="img-block">
                         <img src="./img/logo-honor.png" alt="Honor" />
                         <a
-                            href="https://docs.google.com/forms/d/e/1FAIpQLSdlpQjKXg2310QntzoRByYunmntLUSsJ-UdIwc_Uk0DNic_yA/viewform"
+                            href="https://vk.com/away.php?to=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2F1CbJmey4QWAcnNKGJJms7E0R52mFk3oBWFFtcTFWc9Uc%2Fedit&cc_key="
                             class="btn btn--blue"
                         >
                             know more
@@ -134,11 +134,12 @@
                             class="product-block__img--xiaomi"
                             style="width: 400px; height: 300px;"
                             autoplay
+                            id="video"
                         >
                             <source src="./img/video.mp4" type="video/mp4" />
                         </video>
                         <a
-                            href="https://docs.google.com/forms/d/e/1FAIpQLSdlpQjKXg2310QntzoRByYunmntLUSsJ-UdIwc_Uk0DNic_yA/viewform"
+                            href="https://vk.com/away.php?to=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2F1zoMJcV9kfMwveQ4aMNn69FshoJY8Xx6nuMB1ldggDhE%2Fedit&cc_key="
                             class="btn btn--orange btn--xiaomi"
                         >
                             know more
@@ -149,5 +150,12 @@
                 </div>
             </section>
         </div>
+        <script>
+            function ready() {
+                const video = document.getElementById('video');
+                video.play();
+            }
+            document.addEventListener('DOMContentLoaded', ready);
+        </script>
     </body>
 </html>
