--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="img-block">
                         <img src="./img/logo-honor.png" alt="Honor" />
                         <a
-                            href="https://vk.com/away.php?to=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2F1CbJmey4QWAcnNKGJJms7E0R52mFk3oBWFFtcTFWc9Uc%2Fedit&cc_key="
+                            href="https://docs.google.com/forms/d/1CbJmey4QWAcnNKGJJms7E0R52mFk3oBWFFtcTFWc9Uc/viewform?edit_requested=true"
                             class="btn btn--blue"
                         >
                             know more
@@ -139,7 +139,7 @@
                             <source src="./img/video.mp4" type="video/mp4" />
                         </video>
                         <a
-                            href="https://vk.com/away.php?to=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2F1zoMJcV9kfMwveQ4aMNn69FshoJY8Xx6nuMB1ldggDhE%2Fedit&cc_key="
+                            href="https://docs.google.com/forms/d/1zoMJcV9kfMwveQ4aMNn69FshoJY8Xx6nuMB1ldggDhE/viewform?edit_requested=true"
                             class="btn btn--orange btn--xiaomi"
                         >
                             know more
