--- a/second.html
+++ b/second.html
@@ -36,9 +36,9 @@
         <meta name="twitter:image" content="https://cdn.recyclemag.ru/main/0/0cd324e50689baad9c67638d32e6c28f.jpg">
 	<meta name="google-site-verification" content="qLbJ4XHz9kbdV24CIZxoqMhUe6AntQJKCzi5GH-xGbA" />
   <script src="/js/jquery-1.12.4.min.js"></script>
-  <link href="/css/libs.min.css" rel="stylesheet">
-<link href="/css/font-awesome.min.css" rel="stylesheet">
-<link href="/css/main.css" rel="stylesheet">
+  <!-- <link href="/css/libs.min.css" rel="stylesheet">
+<link href="/css/font-awesome.min.css" rel="stylesheet"> -->
+<link href="main.css" rel="stylesheet">
 </head>
 <body class="page-article active-article">
 
